# soft-raster-physics

./: README.md
src/: .clang-format  CMakeLists.txt  SoftwarePhysicsPlayground.cpp  file.h  imgui_setup.h  types.h
src/delegate/: delegate.cpp  delegate.h
src/imgui/cmake/: imgui-config.cmake
src/particle/: Generator.cpp  Generator.h  Particle.cpp  Particle.h
src/physics/: marshal.cpp  marshal.h  physics_helpers.h  proxy.cpp  proxy.h  proxy_properties_soa.cpp  proxy_properties_soa.h  solver.cpp  solver.h
src/rasteriser/: rasteriser.cc  rasteriser.h  timer.cc  timer.h
src/stb/cmake/: stb-config.cmake
src/vectors/: Vector2.h  Vector4.h  vector_helper.h
